--- a/css/main.scss
+++ b/css/main.scss
@@ -38,6 +38,7 @@
 @import "./sections/hero";
 @import "./sections/gallery";
 @import "./sections/overview";
+@import "./sections/applications";
 
 @import "./sections/footer";
 @import "./sections/modal";
