--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -1,84 +1,103 @@
 .form {
-
-  &--mod {
-    background-color: #2f2f2f;
-    border-radius: 30px 0 0 0;
-    padding: 37px 40px 40px;
-  }
-  &__title {
-    display: block;
-    margin: 0;
-    margin-bottom: 40px;
-    font-weight: 600;
-    font-size: 30px;
-  }
   &__grid {
     display: grid;
-    gap: 30px;
-    grid-template-columns: repeat(3, 1fr);
-    align-items: flex-start;
-    &--mod {
-      grid-template-columns: repeat(1, 1fr);
-    }
+    gap: 32px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 32px;
   }
+  &__check {
+    margin-bottom: 41px;
 
-  &__item {
-    grid-column: span 1;
-
-    input,
-    textarea {
-      max-width: 100%;
-      width: 100%;
-      border: none;
-      background-color: transparent;
-      padding: 20px 0;
-      height: 60px;
-      font-weight: 400;
-      font-size: 13px;
-      line-height: 157%;
-      color: #fff;
-
-      outline: none;
-    }
-
-    &--two {
-      grid-column: span 2;
-    }
-  }
-
-  &__element {
-    border-bottom: 1px solid var(--white);
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-
-  ::placeholder {
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 157%;
-    color: #939393;
-  }
-
-  &__button {
-    max-width: 100%;
-    width: 100%;
-    margin-bottom: 28px;
-  }
-
-  &__footer {
-  }
-  &__agree {
-    display: grid;
-    gap: 30px;
-    grid-template-columns: auto 1fr;
-    align-items: flex-start;
     label {
-      display: block;
       font-weight: 400;
-      font-size: 12px;
-      line-height: 120%;
-      color: #9d9d9d;
+      font-size: 14px;
+      line-height: 143%;
+      color: var(--dark);
+      padding-left: calc(32px + 17px);
+      position: relative;
+      display: block;
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 32px;
+        height: 32px;
+        background-color: #fff;
+        border: 1px solid var(--line);
+        transition: all 0.3s;
+      }
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 8px;
+        left: 8px;
+        width: 18px;
+        height: 14px;
+        background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 5L7.24242 12L17 1' stroke='white' stroke-width='2'/%3e%3c/svg%3e ");
+        background-repeat: no-repeat;
+        opacity: 0;
+        transition: all 0.3s;
+      }
     }
+
+    // Активный чекбокс
+    input[type="checkbox"]:checked + label::before {
+      background: var(--darkorange);
+    }
+
+    input[type="checkbox"]:checked + label::after {
+      opacity: 1;
+    }
+  }
+
+  @media (max-width: 767px) {
+    &__grid {
+      grid-template-columns: repeat(1, 1fr);
+      gap: 20px;
+      margin-bottom: 20px;
+    }
+    &__check {
+      label {
+        padding-left: calc(25px + 10px);
+        &::before {
+          width: 25px;
+          height: 25px;
+        }
+        &::after {
+          top: 5px;
+          left: 4px;
+          scale: 0.8;
+        }
+      }
+
+      br {
+        display: none;
+      }
+    }
+    &__check {
+      margin-bottom: 23px;
+    }
+  }
+}
+
+input,
+textarea {
+  max-width: 100%;
+  width: 100%;
+  font-weight: 400;
+  font-size: 18px;
+  color: var(--dark);
+  padding: 10px 24px;
+  height: 56px;
+  background: var(--white);
+  border: 1px solid var(--line);
+  border-radius: 0;
+
+  @media (max-width: 767px) {
+    height: 50px;
   }
 }
