--- a/css/main.scss
+++ b/css/main.scss
@@ -28,6 +28,7 @@
 @import "./blocks/cust-list";
 @import "./blocks/text";
 @import "./blocks/advantages";
+@import "./blocks/form";
 
 // sections
 @import "./sections/header";
@@ -39,6 +40,7 @@
 @import "./sections/gallery";
 @import "./sections/overview";
 @import "./sections/applications";
+@import "./sections/feedback";
 
 @import "./sections/footer";
 @import "./sections/modal";
