--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -5,6 +5,7 @@
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 32px;
   }
+
   &__check {
     margin-bottom: 41px;
 
@@ -44,6 +45,8 @@
       }
     }
 
+
+
     // Активный чекбокс
     input[type="checkbox"]:checked + label::before {
       background: var(--darkorange);
@@ -54,11 +57,18 @@
     }
   }
 
+  &__column--mod {
+    grid-column: span 2;
+  }
+
   @media (max-width: 767px) {
     &__grid {
       grid-template-columns: repeat(1, 1fr);
       gap: 20px;
       margin-bottom: 20px;
+    }
+    &__column--mod {
+      grid-column: initial;
     }
     &__check {
       label {
@@ -91,7 +101,7 @@ textarea {
   font-weight: 400;
   font-size: 18px;
   color: var(--dark);
-  padding: 10px 24px;
+  padding: 15px 24px;
   height: 56px;
   background: var(--white);
   border: 1px solid var(--line);
@@ -100,4 +110,8 @@ textarea {
   @media (max-width: 767px) {
     height: 50px;
   }
+}
+
+textarea {
+  height: 200px;
 }
