--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
   --white: #fff;
   --line: #d4d4d4;
   --lightgrey: #f2f2f2;
+  --darkblue-06: rgba(19, 23, 48, 0.6);
 }
 
 /* inter-100 - cyrillic_latin */
@@ -1115,11 +1116,17 @@ input[type=radio].visually-hidden {
 .form__check input[type=checkbox]:checked + label::after {
   opacity: 1;
 }
+.form__column--mod {
+  grid-column: span 2;
+}
 @media (max-width: 767px) {
   .form__grid {
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     margin-bottom: 20px;
+  }
+  .form__column--mod {
+    grid-column: initial;
   }
   .form__check label {
     padding-left: 35px;
@@ -1148,7 +1155,7 @@ textarea {
   font-weight: 400;
   font-size: 18px;
   color: var(--dark);
-  padding: 10px 24px;
+  padding: 15px 24px;
   height: 56px;
   background: var(--white);
   border: 1px solid var(--line);
@@ -1158,6 +1165,239 @@ textarea {
   input,
   textarea {
     height: 50px;
+  }
+}
+
+textarea {
+  height: 200px;
+}
+
+.features__list {
+  display: grid;
+  gap: 43px 32px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.features__icon {
+  margin-bottom: 17px;
+  height: 45px;
+  width: 45px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.features__icon svg {
+  display: block;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.features__text {
+  margin: 0;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 125%;
+  color: var(--dark);
+}
+@media (max-width: 767px) {
+  .features__list {
+    gap: 26px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .features__icon {
+    margin-bottom: 14px;
+  }
+}
+
+.partners {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.partners__title {
+  display: block;
+  margin: 0;
+  margin-bottom: 25px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 133%;
+  color: var(--dark);
+}
+.partners__grid {
+  display: grid;
+  gap: 25px 32px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.partners__logo {
+  width: 160px;
+  display: block;
+  margin-bottom: 15px;
+}
+.partners__name {
+  display: block;
+  margin: 0;
+  font-weight: 700;
+  font-size: 14px;
+  color: var(--dark);
+}
+.partners__location {
+  display: block;
+  margin: 0;
+  font-weight: 400;
+  color: #616160;
+  font-size: 14px;
+}
+@media (max-width: 1380px) {
+  .partners__grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .partners__logo {
+    width: 208px;
+  }
+}
+@media (max-width: 767px) {
+  .partners__grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 22px 14px;
+  }
+  .partners__title {
+    font-size: 23px;
+    margin-bottom: 20px;
+  }
+  .partners__logo {
+    width: 160px;
+    margin-bottom: 7px;
+  }
+}
+
+.address-list {
+  margin-bottom: 75px;
+}
+.address-list__grid {
+  display: grid;
+  gap: 22px 32px;
+  grid-template-columns: repeat(2, 1fr);
+}
+.address-list__item {
+  font-family: var(--font-family);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 133%;
+  color: var(--white);
+}
+.address-list__item--mod {
+  grid-column: span 2;
+}
+.address-list__label {
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: var(--white);
+  opacity: 0.7;
+}
+.address-list a[href^="mailto:"] {
+  color: var(--darkorange);
+}
+@media (max-width: 1380px) {
+  .address-list__grid {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px 32px;
+  }
+  .address-list__item--mod {
+    grid-column: span 4;
+  }
+}
+@media (max-width: 1023px) {
+  .address-list__grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px 32px;
+  }
+  .address-list__item--mod {
+    grid-column: span 3;
+  }
+}
+@media (max-width: 767px) {
+  .address-list {
+    margin-bottom: 44px;
+  }
+  .address-list__grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px 15px;
+  }
+  .address-list__item {
+    font-size: 16px;
+  }
+  .address-list__item--mod {
+    grid-column: span 2;
+  }
+}
+
+.site-developers {
+  color: #ededed;
+  font-weight: 400;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+}
+.site-developers__grid {
+  display: grid;
+  gap: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-template-columns: repeat(3, auto);
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+.site-developers a {
+  color: #ec3c3c;
+  padding-left: 5px;
+}
+.site-developers svg {
+  margin-left: 12px;
+  display: block;
+}
+@media (max-width: 1380px) {
+  .site-developers__grid {
+    gap: 0 12px;
+    grid-template-columns: 1fr 32px;
+  }
+  .site-developers svg {
+    margin-left: 0;
+    grid-column-start: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+  }
+  .site-developers a {
+    padding: 0;
+  }
+}
+@media (max-width: 767px) {
+  .site-developers {
+    margin-right: auto;
+    margin-left: 0;
+  }
+  .site-developers__grid {
+    grid-template-columns: repeat(3, auto);
+    gap: 0;
+    max-width: -webkit-max-content;
+    max-width: -moz-max-content;
+    max-width: max-content;
+  }
+  .site-developers a {
+    padding-left: 5px;
+  }
+  .site-developers svg {
+    margin-left: 12px;
+    grid-column-start: initial;
+    grid-row-start: initial;
+    grid-row-end: initial;
   }
 }
 
@@ -1652,6 +1892,162 @@ textarea {
   }
 }
 
+.why-us__grid {
+  display: grid;
+  gap: 30px 32px;
+  grid-template-columns: 9fr 3fr;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+@media (max-width: 1380px) {
+  .why-us__grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+.footer {
+  background-color: #000000;
+  color: #ffffff;
+  padding-bottom: 0;
+  position: relative;
+}
+.footer .title {
+  color: inherit;
+  margin-bottom: 30px;
+}
+.footer__grid {
+  display: grid;
+  gap: 0;
+  grid-template-columns: repeat(2, 1fr);
+}
+.footer__map {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  right: 0;
+}
+.footer__map iframe {
+  width: 100%;
+  height: 100%;
+}
+.footer__details {
+  padding-top: 70px;
+  padding-right: 32px;
+  padding-bottom: 16px;
+}
+.footer__bottom {
+  position: relative;
+  padding-top: 16px;
+}
+.footer__bottom::before {
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 1px;
+  background: var(--white);
+  opacity: 0.2;
+}
+.footer__logo {
+  max-width: 136px;
+  width: 100%;
+}
+.footer__copyright {
+  margin: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 171%;
+  color: #ededed;
+}
+.footer__copyright b {
+  font-weight: 700;
+  color: var(--white);
+}
+.footer__bottom-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.footer__bottom-flex .footer__logo {
+  margin-right: 24px;
+}
+.footer__bottom-flex .footer__copyright {
+  margin-right: 45px;
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}
+@media (max-width: 1380px) {
+  .footer__grid {
+    gap: 0;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .footer__map {
+    position: relative;
+    margin-left: -40px;
+    margin-right: -40px;
+    width: calc(100% + 40px + 40px);
+    height: 488px;
+  }
+  .footer__column--mod {
+    -webkit-box-ordinal-group: 0;
+        -ms-flex-order: -1;
+            order: -1;
+  }
+  .footer__bottom-flex {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: 100%;
+    max-width: 100%;
+  }
+  .footer .site-developers {
+    margin-left: auto;
+  }
+  .footer__bottom {
+    padding-top: 10px;
+  }
+  .footer__details {
+    padding-right: 0;
+  }
+}
+@media (max-width: 1023px) {
+  .footer__details {
+    padding-top: 45px;
+    padding-bottom: 20px;
+  }
+}
+@media (max-width: 767px) {
+  .footer__logo {
+    max-width: 105px;
+    height: auto;
+    margin-right: auto;
+  }
+  .footer .site-developers {
+    margin-left: 0;
+    margin-right: auto;
+  }
+  .footer .footer__copyright {
+    margin-right: 0;
+    max-width: 210px;
+  }
+  .footer__map {
+    margin-left: -20px;
+    margin-right: -20px;
+    width: calc(100% + 20px + 20px);
+    height: 300px;
+  }
+}
+
 .modal {
   position: fixed;
   z-index: 9999;
@@ -1674,40 +2070,47 @@ textarea {
   pointer-events: none;
   background-color: var(--darkblue-06);
 }
-.modal .modal__close {
+.modal__close {
   position: absolute;
-  top: 6px;
-  right: 10px;
-  display: block;
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
-  padding: 10px;
-  color: var(--darkblue);
+  top: -24px;
+  right: 48px;
+  width: 48px;
+  height: 48px;
+  padding: 0;
+  color: var(--white);
   border: none;
-  -webkit-transition: color 0.3s;
-  transition: color 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
   cursor: pointer;
-  background-color: transparent;
+  background-color: var(--darkorange);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-.modal .modal__close svg {
+.modal__close svg {
   display: block;
-  width: 18px;
-  height: 18px;
 }
-.modal .modal__close:hover, .modal .modal__close:active, .modal .modal__close:focus {
+.modal__close:hover, .modal__close:active, .modal__close:focus {
   color: var(--yellow);
 }
 .modal .wrapper {
   position: relative;
+  max-height: 90vh;
+  overflow: auto;
+  padding-top: 24px;
 }
 .modal__body {
   position: relative;
-  width: 455px !important;
-  padding: 50px 45px 55px;
+  width: 832px !important;
+  padding: 38px 48px 48px;
   margin: 0 auto;
   background: var(--white);
-  border-radius: 30px 0 0 0;
 }
 .modal .form__element {
   border-bottom: 1px solid var(--black-text);
@@ -1717,25 +2120,18 @@ textarea {
   visibility: visible;
   opacity: 1;
 }
-@media (max-width: 767px) {
+@media (max-width: 1023px) {
   .modal__body {
     width: 100% !important;
-    padding: 34px 30px 30px;
+    padding: 25px 20px 25px;
   }
-}
-.modal .form__grid {
-  grid-template-columns: repeat(1, 1fr);
-}
-.modal .form__footer {
-  grid-column: initial;
-  gap: 32px;
-  grid-template-columns: 1fr;
-}
-.modal .form .button {
-  margin-left: 0;
-}
-.modal .form__item::after {
-  background-color: var(--darkblue-02);
+  .modal__close {
+    position: absolute;
+    top: -20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+  }
 }
 
 .header-sticky .header {
@@ -1786,4 +2182,8 @@ textarea {
 }
 .menu-open .header__grid::after {
   opacity: 0.15;
+}
+
+.modal-open {
+  overflow: hidden;
 }/*# sourceMappingURL=main.css.map */
