Закончил вёрстку проекта

--- a/css/base/_global.scss
+++ b/css/base/_global.scss
@@ -3,6 +3,7 @@ html {
   scroll-behavior: smooth;
   height: 100%;
   scrollbar-gutter: stable;
+  scroll-padding-top: var(--header-height);
 }
 
 html *,
