--- a/css/main.scss
+++ b/css/main.scss
@@ -32,6 +32,7 @@
 @import "./blocks/partners";
 @import "./blocks/address-list";
 @import "./blocks/site-developers";
+@import "./blocks/map";
 
 // sections
 @import "./sections/header";
