--- a/css/blocks/_form.scss
+++ b/css/blocks/_form.scss
@@ -1,7 +1,7 @@
 .form {
   &__grid {
     display: grid;
-    gap: 32px;
+    gap: 20px 32px;
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 32px;
   }
@@ -101,17 +101,19 @@ textarea {
   font-weight: 400;
   font-size: 18px;
   color: var(--dark);
-  padding: 15px 24px;
+  padding: 13px 24px;
   height: 56px;
   background: var(--white);
   border: 1px solid var(--line);
   border-radius: 0;
 
   @media (max-width: 767px) {
-    height: 50px;
+    padding: 13px 20px;
+    height: 50px !important;
   }
 }
 
 textarea {
-  height: 200px;
+  height: 120px;
+  overflow: hidden;
 }
