--- a/css/blocks/_main-navigation.scss
+++ b/css/blocks/_main-navigation.scss
@@ -26,7 +26,8 @@
     background-color: transparent;
     &:hover,
     &:active,
-    &:focus {
+    &:focus,
+    &.active {
       background: var(--darkorange);
       color: var(--white);
     }
