--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -76,6 +76,9 @@
       top: -8px;
       bottom: -8px;
       right: -8px;
+      box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.2);
+      background: var(--orange);
+
     }
   }
 
@@ -91,7 +94,7 @@
   &--mod {
     color: var(--dark);
     &::before {
-      background-color: var(--white);
+      background-color: var(--white) !important;
       border: 1px solid var(--line);
     }
     .button__icon {
@@ -122,6 +125,7 @@
         top: -4px;
         bottom: -4px;
         right: -4px;
+        box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.2);
       }
     }
   }
