--- a/css/sections/_gallery.scss
+++ b/css/sections/_gallery.scss
@@ -13,8 +13,65 @@
   &__item {
     display: block;
   }
+  &__youtube {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    img {
+      display: block;
+      object-fit: cover;
+    }
+    a {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  &__local-video {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    img {
+      display: block;
+      object-fit: cover;
+    }
+  }
   .swiper-slide {
     max-width: 864px;
+  }
+  &__decorate-button {
+    display: flex;
+    width: 96px;
+    height: 96px;
+    justify-content: center;
+    align-items: center;
+    background: var(--orange);
+
+    transition: all 0.3s;
+    &:hover {
+      background: var(--darkorange);
+      width: 112px;
+      height: 112px;
+    }
+  }
+
+  &__navigation {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: grid;
+    gap: 32px;
+    align-items: center;
+    grid-template-columns: auto 1fr;
+    max-width: max-content;
+  }
+  &__label {
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 154%;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--white);
   }
 
   @media (max-width: 1380px) {
@@ -28,9 +85,18 @@
     .swiper-slide {
       max-width: 688px;
     }
+    &__navigation {
+      gap: 24px;
+    }
+    &__decorate-button {
+      width: 88px;
+      height: 88px;
+      &:hover {
+        width: 104px;
+        height: 104px;
+      }
+    }
   }
-
-
 
   @media (max-width: 767px) {
     &__header {
@@ -42,6 +108,20 @@
     }
     .swiper-slide {
       max-width: 335px;
+    }
+    &__navigation {
+      gap: 10px;
+    }
+    &__decorate-button {
+      width: 50px;
+      height: 50px;
+      &:hover {
+        width: 66px;
+        height: 66px;
+      }
+    }
+    &__label {
+      line-height: 123%;
     }
   }
 }
