--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -7,6 +7,18 @@
   padding-top: calc(96px + 60px);
   padding-bottom: 60px;
   position: relative;
+  // &::before {
+  //   content: "";
+  //   position: absolute;
+  //   left: 0;
+  //   top: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   // background:
+  //   // linear-gradient(0deg, #fff 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #f8f8f8 0%, rgba(248, 248, 248, 0) 100%);
+  //   background-color: red;
+  //   z-index: 1;
+  // }
 
   &__grid {
     display: grid;
@@ -36,6 +48,7 @@
     position: absolute;
     right: 10%;
     object-fit: contain;
+    z-index: 99;
   }
   &__video {
     position: absolute;
@@ -46,6 +59,19 @@
     left: 0;
     right: 0;
     bottom: 0;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background:
+      linear-gradient(0deg, #fff 0%, rgba(255, 255, 255, 0) 100%), linear-gradient(180deg, #f8f8f8 0%, rgba(248, 248, 248, 0) 100%);
+      // background-color: red;
+      z-index: 1;
+    }
 
     video {
       display: block;
@@ -64,8 +90,6 @@
       right: 0;
       top: -75px;
     }
-
-
   }
 
   @media (max-width: 1023px) {
