--- a/css/sections/_mobile-navigation.scss
+++ b/css/sections/_mobile-navigation.scss
@@ -70,7 +70,10 @@
         z-index: 0;
       }
 
-      &:hover {
+      &:hover,
+      &:active,
+      &:focus,
+      &.active {
         color: var(--white);
         &::before {
           background-color: var(--darkorange);
@@ -104,7 +107,10 @@
       gap: 16px;
       font-size: 25px;
 
-      &:hover {
+      &:hover,
+      &:active,
+      &:focus,
+      &.active {
         &::before {
           left: -20px;
           right: -20px;
