--- a/css/main.css
+++ b/css/main.css
@@ -699,7 +699,7 @@ input[type=radio].visually-hidden {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   position: relative;
-  color: var(--orange);
+  color: var(--darkorange);
 }
 .link::after {
   content: "";
@@ -709,7 +709,7 @@ input[type=radio].visually-hidden {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   height: 1px;
-  background-color: var(--orange);
+  color: var(--darkorange);
   position: absolute;
   bottom: 2px;
   left: 0;
@@ -731,6 +731,7 @@ input[type=radio].visually-hidden {
   .link {
     font-size: 12px;
     font-weight: 500;
+    line-height: 1.3;
   }
 }
 
@@ -768,7 +769,6 @@ input[type=radio].visually-hidden {
   position: absolute;
   width: 16px;
   height: 3px;
-  border-radius: 4px;
   background-color: var(--white);
 }
 
@@ -799,7 +799,9 @@ input[type=radio].visually-hidden {
 }
 
 .logotype {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   max-width: -webkit-max-content;
   max-width: -moz-max-content;
   max-width: max-content;
@@ -837,6 +839,13 @@ input[type=radio].visually-hidden {
 .buttons-grid .button {
   padding-inline: 20px;
   max-width: 100%;
+}
+@media (max-width: 1023px) {
+  .buttons-grid {
+    gap: 16px;
+    max-width: 100%;
+    grid-template-columns: 1fr;
+  }
 }
 @media (max-width: 767px) {
   .buttons-grid {
@@ -928,7 +937,7 @@ input[type=radio].visually-hidden {
     height: 50px;
   }
   .swiper-button svg {
-    width: 8px;
+    width: 15px;
   }
   .swiper-button:hover::before {
     left: -4px;
@@ -1033,6 +1042,12 @@ input[type=radio].visually-hidden {
 .announce-card__specs {
   margin-bottom: 22px;
 }
+@media (max-width: 767px) {
+  .announce-card__image img {
+    margin-right: auto;
+    margin-left: auto;
+  }
+}
 
 .cust-list {
   list-style: none;
@@ -1062,6 +1077,11 @@ input[type=radio].visually-hidden {
 }
 .cust-list li:hover::after {
   width: 12px;
+}
+@media (max-width: 1023px) {
+  .cust-list {
+    line-height: 1.8;
+  }
 }
 
 .text {
@@ -1128,6 +1148,9 @@ input[type=radio].visually-hidden {
     gap: 23px;
     grid-template-columns: repeat(1, 1fr);
   }
+  .advantages__title {
+    margin-bottom: 6px;
+  }
 }
 
 .form__grid {
@@ -1166,7 +1189,7 @@ input[type=radio].visually-hidden {
   display: block;
   position: absolute;
   top: 8px;
-  left: 8px;
+  left: 7px;
   width: 18px;
   height: 14px;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M1 5L7.24242 12L17 1' stroke='white' stroke-width='2'/%3e%3c/svg%3e ");
@@ -1183,6 +1206,18 @@ input[type=radio].visually-hidden {
 }
 .form__column--mod {
   grid-column: span 2;
+}
+@media (max-width: 1279px) {
+  .form__check label br {
+    display: none;
+  }
+  .form__check label::before {
+    top: -5px;
+  }
+  .form__check label::after {
+    top: 4px;
+    left: 8px;
+  }
 }
 @media (max-width: 767px) {
   .form__grid {
@@ -1251,11 +1286,15 @@ textarea {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .features__icon svg {
   display: block;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 .features__text {
   margin: 0;
@@ -1263,6 +1302,12 @@ textarea {
   font-size: 16px;
   line-height: 125%;
   color: var(--dark);
+}
+.features__item:hover .features__icon {
+  scale: 1.1;
+}
+.features__item:hover .features__icon path {
+  stroke: #ff9600;
 }
 @media (max-width: 767px) {
   .features__list {
@@ -1297,6 +1342,13 @@ textarea {
   width: 160px;
   display: block;
   margin-bottom: 15px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.partners__logo:hover {
+  scale: 1.1;
+  -webkit-box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.2);
 }
 .partners__name {
   display: block;
@@ -1315,9 +1367,15 @@ textarea {
 @media (max-width: 1380px) {
   .partners__grid {
     grid-template-columns: repeat(4, 1fr);
+    gap: 41px 32px;
   }
   .partners__logo {
     width: 208px;
+  }
+}
+@media (max-width: 1023px) {
+  .partners__grid {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 @media (max-width: 767px) {
@@ -1362,8 +1420,19 @@ textarea {
   color: var(--white);
   opacity: 0.7;
 }
+.address-list a {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.address-list a:hover, .address-list a:active, .address-list a:focus {
+  color: var(--orange);
+}
 .address-list a[href^="mailto:"] {
   color: var(--darkorange);
+}
+.address-list a[href^="mailto:"]:hover, .address-list a[href^="mailto:"]:active, .address-list a[href^="mailto:"]:focus {
+  color: var(--orange);
+  text-decoration: underline;
 }
 @media (max-width: 1380px) {
   .address-list__grid {
@@ -1425,10 +1494,23 @@ textarea {
 .site-developers a {
   color: #ec3c3c;
   padding-left: 5px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.site-developers a:hover, .site-developers a:active, .site-developers a:focus {
+  color: var(--orange);
+  text-decoration: underline;
 }
 .site-developers svg {
   margin-left: 12px;
   display: block;
+}
+.site-developers svg path {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.site-developers svg:hover path, .site-developers svg:active path, .site-developers svg:focus path {
+  fill: #ec3c3c;
 }
 @media (max-width: 1380px) {
   .site-developers__grid {
@@ -1580,8 +1662,8 @@ textarea {
 }
 @media (max-width: 767px) {
   .header__grid {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 8px;
+    padding-bottom: 8px;
   }
   .header__left {
     gap: 10px;
@@ -1682,6 +1764,7 @@ textarea {
   }
   .mobile-navigation__link:hover .mobile-navigation__icon, .mobile-navigation__link:active .mobile-navigation__icon, .mobile-navigation__link:focus .mobile-navigation__icon, .mobile-navigation__link.active .mobile-navigation__icon {
     border: 1px solid transparent;
+    color: var(--white);
   }
   .mobile-navigation__icon {
     display: -webkit-box;
@@ -1696,6 +1779,7 @@ textarea {
     width: 88px;
     height: 88px;
     border: 1px solid var(--line);
+    color: var(--darkorange);
   }
   .mobile-navigation__icon svg {
     -ms-flex-negative: 0;
@@ -1726,12 +1810,28 @@ textarea {
 .section--black {
   background-color: #000;
   color: #fff;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 .section--black .title {
   color: inherit;
 }
 .section--black a {
   color: inherit;
+}
+@media (max-width: 767px) {
+  .section {
+    padding-top: 22.5px;
+    padding-bottom: 22.5px;
+  }
+  .section--black {
+    margin-top: 22.5px;
+    margin-bottom: 22.5px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+  }
 }
 
 .hero {
@@ -1814,6 +1914,7 @@ textarea {
   .hero {
     min-height: initial;
     padding-top: 133px;
+    padding-bottom: 35px;
   }
   .hero__grid {
     grid-template-columns: 1fr;
@@ -1831,6 +1932,7 @@ textarea {
 @media (max-width: 767px) {
   .hero {
     padding-top: 82px;
+    padding-bottom: 20px;
   }
   .hero__grid {
     gap: 32px;
@@ -1838,9 +1940,11 @@ textarea {
   .hero__text {
     margin: 0;
     font-size: 16px;
+    margin-bottom: 10px;
   }
   .hero__title {
     font-size: 40px;
+    margin-bottom: 25px;
   }
   .hero__image {
     margin-left: initial;
@@ -1850,6 +1954,9 @@ textarea {
   }
 }
 
+.gallery {
+  margin-top: 35px;
+}
 .gallery__header {
   margin-bottom: 55px;
 }
@@ -1942,9 +2049,6 @@ textarea {
   .gallery__header-grid {
     grid-template-columns: 1fr auto;
   }
-  .gallery .swiper-slide {
-    max-width: 688px;
-  }
   .gallery__navigation {
     gap: 24px;
   }
@@ -1955,6 +2059,19 @@ textarea {
   .gallery__decorate-button:hover {
     width: 104px;
     height: 104px;
+  }
+}
+@media (max-width: 1023px) {
+  .gallery {
+    margin-top: 0;
+  }
+  .gallery__header-grid {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+  .gallery .swiper-slide {
+    max-width: 688px;
   }
 }
 @media (max-width: 767px) {
@@ -1984,14 +2101,25 @@ textarea {
   }
 }
 
+.overview {
+  margin-bottom: 10px;
+}
 .overview__grid {
   display: grid;
   gap: 47px 160px;
   grid-template-columns: 9fr 3fr;
 }
 @media (max-width: 1380px) {
+  .overview {
+    margin-bottom: 0;
+  }
   .overview__grid {
     grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 767px) {
+  .overview__grid {
+    gap: 40px;
   }
 }
 
@@ -2007,6 +2135,11 @@ textarea {
      object-fit: cover;
   margin-bottom: 21px;
   display: block;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.applications__item:hover .applications__image {
+  scale: 1.1;
 }
 .applications__description {
   display: block;
@@ -2025,6 +2158,11 @@ textarea {
   width: 16px;
   height: 2px;
   background-color: var(--orange);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.applications__item:hover .applications__description::after {
+  width: 24px;
 }
 @media (max-width: 1380px) {
   .applications__list {
@@ -2056,6 +2194,9 @@ textarea {
   display: grid;
   gap: 40px 32px;
   grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .feedback__image {
   -webkit-transition: all 0.3s;
@@ -2068,7 +2209,7 @@ textarea {
   -webkit-box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.2);
 }
-@media (max-width: 1380px) {
+@media (max-width: 1279px) {
   .feedback__grid {
     grid-template-columns: repeat(1, 1fr);
     gap: 25px;
@@ -2077,6 +2218,12 @@ textarea {
     -webkit-box-ordinal-group: 0;
         -ms-flex-order: -1;
             order: -1;
+  }
+  .feedback__image img {
+    width: 100%;
+  }
+  .feedback .title br {
+    display: none;
   }
 }
 
@@ -2095,6 +2242,7 @@ textarea {
 }
 
 .footer {
+  margin-top: 35px;
   background-color: #000000;
   color: #ffffff;
   padding-bottom: 0;
@@ -2208,13 +2356,14 @@ textarea {
     padding-right: 0;
   }
 }
-@media (max-width: 1023px) {
+@media (max-width: 767px) {
+  .footer {
+    margin-top: 25.5px;
+  }
   .footer__details {
     padding-top: 45px;
     padding-bottom: 20px;
   }
-}
-@media (max-width: 767px) {
   .footer__logo {
     max-width: 105px;
     height: auto;
@@ -2289,7 +2438,7 @@ textarea {
 }
 .modal .wrapper {
   position: relative;
-  max-height: 90vh;
+  max-height: 100%;
   overflow: auto;
   padding-top: 24px;
 }
