--- a/css/blocks/_button-menu.scss
+++ b/css/blocks/_button-menu.scss
@@ -26,7 +26,7 @@
   position: absolute;
   width: 16px;
   height: 3px;
-  border-radius: 4px;
+  // border-radius: 4px;
   background-color: var(--white);
 }
 
