--- a/css/blocks/_buttons-grid.scss
+++ b/css/blocks/_buttons-grid.scss
@@ -9,9 +9,13 @@
     max-width: 100%;
   }
 
-  // @media (max-width: 1023px) {
-  //   grid-template-columns: repeat(2, 208px);
-  // }
+  @media (max-width: 1023px) {
+    gap: 16px;
+    max-width: 100%;
+    grid-template-columns: 1fr;
+  }
+
+
 
   @media (max-width: 767px) {
     gap: 10px;
