--- a/css/blocks/_site-developers.scss
+++ b/css/blocks/_site-developers.scss
@@ -16,11 +16,28 @@
   a {
     color: #ec3c3c;
     padding-left: 5px;
+    transition: all 0.3s;
+    &:hover,
+    &:active,
+    &:focus {
+      color: var(--orange);
+      text-decoration: underline;
+    }
   }
 
   svg {
     margin-left: 12px;
     display: block;
+    path {
+      transition: all 0.3s;
+    }
+    &:hover,
+    &:active,
+    &:focus {
+      path {
+        fill: #ec3c3c;;
+      }
+    }
   }
 
   @media (max-width: 1380px) {
