--- a/css/sections/_hero.scss
+++ b/css/sections/_hero.scss
@@ -95,6 +95,7 @@
   @media (max-width: 1023px) {
     min-height: initial;
     padding-top: 133px;
+    padding-bottom: 35px;
     &__grid {
       grid-template-columns: 1fr;
       gap: 0;
@@ -109,6 +110,8 @@
 
   @media (max-width: 767px) {
     padding-top: 82px;
+    padding-bottom: 20px;
+
     &__grid {
       gap: 32px;
     }
@@ -116,9 +119,11 @@
     &__text {
       margin: 0;
       font-size: 16px;
+      margin-bottom: 10px;
     }
     &__title {
       font-size: 40px;
+      margin-bottom: 25px;
     }
     &__image {
       margin-left: initial;
