--- a/css/sections/_modal.scss
+++ b/css/sections/_modal.scss
@@ -43,7 +43,7 @@
 
   .wrapper {
     position: relative;
-    max-height: 90vh;
+    max-height: 100%;
     overflow: auto;
     padding-top: 24px;
   }
