--- a/css/sections/_overview.scss
+++ b/css/sections/_overview.scss
@@ -1,4 +1,5 @@
 .overview {
+  margin-bottom: 10px;
   &__grid {
     display: grid;
     gap: 47px 160px;
@@ -6,8 +7,15 @@
   }
 
   @media (max-width: 1380px) {
+    margin-bottom: 0;
     &__grid {
       grid-template-columns: 1fr;
+    }
+  }
+
+  @media (max-width: 767px) {
+    &__grid {
+      gap: 40px;
     }
   }
 }
