--- a/css/sections/_section.scss
+++ b/css/sections/_section.scss
@@ -5,12 +5,27 @@
   &--black {
     background-color: #000;
     color: #fff;
+    margin-top: 45px;
+    margin-bottom: 45px;
+    padding-top: 70px;
+    padding-bottom: 70px;
 
     .title {
       color: inherit;
     }
     a {
       color: inherit;
+    }
+  }
+
+  @media (max-width: 767px) {
+    padding-top: 22.5px;
+    padding-bottom: 22.5px;
+    &--black {
+      margin-top: 22.5px;
+      margin-bottom: 22.5px;
+      padding-top: 45px;
+      padding-bottom: 45px;
     }
   }
 }
